# pairton

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: hyper_data.yaml  predict_config.yaml
configs/data/: sequence_hyper.yaml  sequence_hyper_dif3.yaml  sequence_hyper_inference.yaml
configs/models/: bias_transformer.yaml  pairformer.yaml  pairformer_deep.yaml  pairformer_hyper.yaml  transformer.yaml
configs/trainer/: default_trainer.yaml
scripts/: hyper_to_h5_cli.py  uncertainty_computation.py
src/pairton/: main.py
src/pairton/data/: data_module.py  factories.py  hyper.py  transforms.py  types.py  utils.py
src/pairton/layers/: hyper.py  symmetric.py
src/pairton/models/: __init__.py  base.py  bias_transformer_wrapper.py  callbacks.py  metrics.py  pair_hyper.py  pairformer_wrapper.py  pairton.py  transformer_wrapper.py  utils.py
tests/: test_hyper_softmax.py
workflow/: diffusion_comparison.smk  get_uncertainties.smk  model_comparison.smk
workflow/config/: diffusion_comparison.yaml  get_uncertainties.yaml  model_comparison.yaml
workflow/profile/: config.yaml
