[project]
name = "pairton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andreas Hermansen", email = "mail@andreashermansen.dk" }
]
requires-python = ">=3.12"
dependencies = [
    "einx>=0.4.3",
    "h5py>=3.16.0",
    "jaxtyping>=0.3.9",
    "jsonargparse[omegaconf,signatures]>=4.47.0",
    "lightning>=2.6.1",
    "ml-utils",
    "pandas[parquet]>=3.0.2",
    "rich>=14.3.3",
    "snakemake>=9.19.0",
    "snakemake-executor-plugin-slurm>=1.4.0",
    "torch>=2.8.0",
    "wandb>=0.25.1",
]

[project.scripts]
pairton = "pairton:main"

[project.optional-dependencies]
root = [
    "awkward>=2.9.0",
    "uproot>=5.7.2",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
ml-utils = { git = "ssh://git@github.com/AMHermansen/ml_utils.git", rev = "01c814bdd06cbbadf006423847fbc0c7d03436ba" }

[dependency-groups]
dev = [
    "pyright[nodejs]>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
